@@ -1,30 +1,22 @@
 #!/usr/bin/env bash
 set -x
 set -e
+CONTAINER_NAME="clip-producer"
+REGISTRY="repo.treescale.com/sammers"
+IMAGE_NAME="$REGISTRY/$CONTAINER_NAME"
 SSH_HOST="159.89.11.41"
-cd ~
-cd twitch-auto-clip-maker 
-git pull
-gradle clip-producer:clean clip-producer:versionTxt clip-producer:build
+
+cd ~/twitch-auto-clip-maker
+docker build -f clip-producer/Dockerfile . -t $IMAGE_NAME
+docker push $IMAGE_NAME:latest
 ssh root@$SSH_HOST <<'ENDSSH'
+CONTAINER_NAME="clip-producer"
+REGISTRY="repo.treescale.com/sammers"
+IMAGE_NAME="$REGISTRY/$CONTAINER_NAME"
 set -x
-mkdir -p /root/twitch-auto-clip
-ENDSSH
-scp clip-producer/build/libs/twitch-auto-clip-producer-*.jar root@$SSH_HOST:/root/twitch-auto-clip
-scp ~/twitch-auto-clip-maker/deployment/cfg.json root@$SSH_HOST:/root/twitch-auto-clip
-scp ~/twitch-auto-clip-maker/deployment/db.json root@$SSH_HOST:/root/twitch-auto-clip
-ssh root@$SSH_HOST -t bash <<'ENDSSH'
-set -x
-JVM_OPTS="-XX:+HeapDumpOnOutOfMemoryError -Xmx400m -Xlog:gc*:file=./gc.log"
-$(/root/.sdkman/candidates/java/current/bin/jps | grep "twitch-auto-clip*" | awk '{print $1}' | xargs kill -9) || true
-echo $EXIT_CODE
-cd /root/twitch-auto-clip
-nohup /root/.sdkman/candidates/java/current/bin/java $JVM_OPTS \
-                                                     -jar \
-                                                     /root/twitch-auto-clip/twitch-auto-clip-producer-*.jar \
-                                                     -cfg /root/twitch-auto-clip/cfg.json \
-                                                     -db /root/twitch-auto-clip/db.json \
-                                                      2> err.log
-                                                    &
-sleep 3
+docker pull $IMAGE_NAME
+docker stop $CONTAINER_NAME
+docker rm $CONTAINER_NAME
+docker run -p5006:5005 --name=$CONTAINER_NAME --restart=always -d $IMAGE_NAME
+docker logs -f $CONTAINER_NAME
 ENDSSH
